added ability to view users deck

--- a/templates/deck/index.html.template
+++ b/templates/deck/index.html.template
@@ -1,1 +1,7 @@
 {{base}}
+##decks##
+<h1>[deckName]</h1>
+<div style="display: flex; flex-wrap: wrap; justify-content: left; align-items: center">
+    [cards]
+</div>
+##
