--- a/templates/home.html.template
+++ b/templates/home.html.template
@@ -1,4 +1,13 @@
-{{base}}
+<nav class="navbar bg-body-tertiary">
+    <div class="container-fluid">
+        <a class="navbar-brand">Magic: the cards</a>
+        *isPremium*<a class="nav-link" href="/decks">Your decks</a>*
+        <form class="d-flex" method="get" action="/">
+            <input class="form-control me-2" type="search" name="search" placeholder="Search card" aria-label="Search">
+            <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+    </div>
+</nav>
 <div style="display: flex; flex-wrap: wrap; justify-content: center; align-items: center">
     ##cards##
     <div style="margin: 2.5%;">
