--- a/.env
+++ b/.env
@@ -1,5 +1,1 @@
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_USER=testuser
-DB_PASSWORD=!TestWachtwoord!
-DB_DATABASE=database
+MAGIC_API=https://api.magicthegathering.io/v1/cards
