--- a/templates/base.html.template
+++ b/templates/base.html.template
@@ -1,6 +1,7 @@
 <nav class="navbar bg-body-tertiary">
     <div class="container-fluid">
         <a class="navbar-brand">Magic: the cards</a>
+        <a class="nav-link" href="/logout">Logout</a>
         <form class="d-flex" method="get" action="/">
             <input class="form-control me-2" type="search" name="search" placeholder="Search card" aria-label="Search">
             <button class="btn btn-outline-success" type="submit">Search</button>
