--- a/templates/home.html.template
+++ b/templates/home.html.template
@@ -2,6 +2,7 @@
     <div class="container-fluid">
         <a class="navbar-brand">Magic: the cards</a>
         *isPremium*<a class="nav-link" href="/decks">Your decks</a>*
+        <a class="nav-link" href="/logout">Logout</a>
         <form class="d-flex" method="get" action="/">
             <input class="form-control me-2" type="search" name="search" placeholder="Search card" aria-label="Search">
             <button class="btn btn-outline-success" type="submit">Search</button>
