--- a/templates/deck/deck.html.template
+++ b/templates/deck/deck.html.template
@@ -5,5 +5,5 @@
         <input type="hidden" name="card" value="{id}">
         <button type="submit" class="btn btn-danger">Remove</button>
     </form>
-    <img src="{img}" alt="{name}"/>
+    <img width="223" height="310" src="{img}" alt="{name}"/>
 </div>
