--- a/templates/admin/newCardModal.html.template
+++ b/templates/admin/newCardModal.html.template
@@ -2,7 +2,7 @@
     Add new card
 </button>
 
-<div class="modal fade" id="newModal" tabindex="-1" aria-labelledby="newModalLabel" aria-hidden="true">
+<div class="modal fade" id="newModal" tabindex="-1" aria-labelledby="newModalLabel" aria-hidden="true" style="color:black;">
     <div class="modal-dialog">
         <form method="post" action="/card/add" class="modal-content" enctype="multipart/form-data">
             <div class="modal-header">
@@ -14,8 +14,10 @@
                     Name:
                     <input class="form-control" type="text" placeholder="Enter a name" name="name" />
                 </label>
-                <label for="file">Choose a file to upload:</label>
-                <input type="file" id="file" name="file" accept=".jpg, .jpeg, .png, .gif">
+                <label>
+                    Choose a file to upload:
+                    <input class="form-control" type="file" id="file" name="file" accept=".jpg, .jpeg, .png, .gif">
+                </label>
             </div>
             <div class="modal-footer">
                 <button type="submit" class="btn btn-primary">Save changes</button>
