--- a/templates/base.html.template
+++ b/templates/base.html.template
@@ -1,6 +1,7 @@
 <nav class="navbar bg-primary bg-gradient">
     <div class="container-fluid">
         <a class="navbar-brand" href="/">Magic: the cards</a>
+        <a class="nav-link" href="/">Home</a>
         <a class="nav-link" href="/logout">Logout</a>
         <form class="d-flex" method="get" action="/">
             <input class="form-control me-2" type="search" name="search" placeholder="Search card" aria-label="Search">
