--- a/templates/deck/add_cards.html.template
+++ b/templates/deck/add_cards.html.template
@@ -1,6 +1,7 @@
 <nav class="navbar bg-primary bg-gradient">
     <div class="container-fluid">
         <a class="navbar-brand" href="/">Magic: the cards</a>
+        <a class="nav-link" href="/">Home</a>
         <a class="nav-link" href="/logout">Logout</a>
         <form class="d-flex" method="get" action="/deck/card/add">
             <input type="hidden" name="deck" value="{deck}" />
